--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,12 +11,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      # Add your test steps
+      # Add your test steps here if needed...
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ghcr.io/kitmacleod/publish-packages/game
+          images: ghcr.io/YOURNAME/publish-packages/game
           tags: type=sha
       - name: Login to GHCR
         uses: docker/login-action@v2
